fix: web search